@startuml

title __IMPL's Class Diagram__\n

  namespace com.deta.kopmart_backend {
    namespace service {
      namespace impl {
        class com.deta.kopmart_backend.service.impl.CartServiceImpl {
            + checkout()
            + delete()
            + getCart()
            + mergeLocalCart()
        }
      }
    }
  }
  

  namespace com.deta.kopmart_backend {
    namespace service {
      namespace impl {
        class com.deta.kopmart_backend.service.impl.CategoryServiceImpl {
            + findAll()
            + findByCategoryType()
            + findByCategoryTypeIn()
            + save()
        }
      }
    }
  }
  

  namespace com.deta.kopmart_backend {
    namespace service {
      namespace impl {
        class com.deta.kopmart_backend.service.impl.OrderServiceImpl {
            + cancel()
            + findAll()
            + findByBuyerEmail()
            + findByBuyerPhone()
            + findByStatus()
            + findOne()
            + finish()
        }
      }
    }
  }
  

  namespace com.deta.kopmart_backend {
    namespace service {
      namespace impl {
        class com.deta.kopmart_backend.service.impl.ProductInOrderServiceImpl {
            + findOne()
            + update()
        }
      }
    }
  }
  

  namespace com.deta.kopmart_backend {
    namespace service {
      namespace impl {
        class com.deta.kopmart_backend.service.impl.ProductServiceImpl {
            + decreaseStock()
            + delete()
            + findAll()
            + findAllByNameLike()
            + findAllInCategory()
            + findFourNewestProducts()
            + findOne()
            + increaseStock()
            + offSale()
            + onSale()
            + save()
            + update()
        }
      }
    }
  }
  

  namespace com.deta.kopmart_backend {
    namespace service {
      namespace impl {
        class com.deta.kopmart_backend.service.impl.UserServiceImpl {
            - passwordEncoder : PasswordEncoder
            + findByRole()
            + findOne()
            + save()
            + update()
        }
      }
    }
  }
  

  com.deta.kopmart_backend.service.impl.CartServiceImpl .up.|> com.deta.kopmart_backend.service.CartService
  com.deta.kopmart_backend.service.impl.CartServiceImpl o-- com.deta.kopmart_backend.repository.CartRepository : cartRepository
  com.deta.kopmart_backend.service.impl.CartServiceImpl o-- com.deta.kopmart_backend.repository.OrderRepository : orderRepository
  com.deta.kopmart_backend.service.impl.CartServiceImpl o-- com.deta.kopmart_backend.repository.ProductInOrderRepository : productInOrderRepository
  com.deta.kopmart_backend.service.impl.CartServiceImpl o-- com.deta.kopmart_backend.service.ProductService : productService
  com.deta.kopmart_backend.service.impl.CartServiceImpl o-- com.deta.kopmart_backend.repository.UserRepository : userRepository
  com.deta.kopmart_backend.service.impl.CartServiceImpl o-- com.deta.kopmart_backend.service.UserService : userService
  com.deta.kopmart_backend.service.impl.CategoryServiceImpl .up.|> com.deta.kopmart_backend.service.CategoryService
  com.deta.kopmart_backend.service.impl.CategoryServiceImpl o-- com.deta.kopmart_backend.repository.ProductCategoryRepository : productCategoryRepository
  com.deta.kopmart_backend.service.impl.OrderServiceImpl .up.|> com.deta.kopmart_backend.service.OrderService
  com.deta.kopmart_backend.service.impl.OrderServiceImpl o-- com.deta.kopmart_backend.repository.OrderRepository : orderRepository
  com.deta.kopmart_backend.service.impl.OrderServiceImpl o-- com.deta.kopmart_backend.repository.ProductInOrderRepository : productInOrderRepository
  com.deta.kopmart_backend.service.impl.OrderServiceImpl o-- com.deta.kopmart_backend.repository.ProductInfoRepository : productInfoRepository
  com.deta.kopmart_backend.service.impl.OrderServiceImpl o-- com.deta.kopmart_backend.service.ProductService : productService
  com.deta.kopmart_backend.service.impl.OrderServiceImpl o-- com.deta.kopmart_backend.repository.UserRepository : userRepository
  com.deta.kopmart_backend.service.impl.ProductInOrderServiceImpl .up.|> com.deta.kopmart_backend.service.ProductInOrderService
  com.deta.kopmart_backend.service.impl.ProductInOrderServiceImpl o-- com.deta.kopmart_backend.repository.ProductInOrderRepository : productInOrderRepository
  com.deta.kopmart_backend.service.impl.ProductServiceImpl .up.|> com.deta.kopmart_backend.service.ProductService
  com.deta.kopmart_backend.service.impl.ProductServiceImpl o-- com.deta.kopmart_backend.service.CategoryService : categoryService
  com.deta.kopmart_backend.service.impl.ProductServiceImpl o-- com.deta.kopmart_backend.repository.ProductInfoRepository : productInfoRepository
  com.deta.kopmart_backend.service.impl.UserServiceImpl .up.|> com.deta.kopmart_backend.service.UserService
  com.deta.kopmart_backend.service.impl.UserServiceImpl o-- com.deta.kopmart_backend.repository.CartRepository : cartRepository
  com.deta.kopmart_backend.service.impl.UserServiceImpl o-- com.deta.kopmart_backend.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
